--- a/grasse/src/main/webapp/css/header.css
+++ b/grasse/src/main/webapp/css/header.css
@@ -15,27 +15,47 @@ li {
 }
 
 #header {
+	top: 0;
 	width: 100%;
 	border: 0px red solid;
 }
 
 #header>.gnb {
+	position: fixed;
 	width: 100%;
+	margin: 0px auto;
 	background-color: #353535;
 	border: 0px yellow solid;
+	background-color: #353535;
 }
 
 #header>.gnb>ul {
-	width: 1000px;
+	width: 1024px;
 	height: 30px;
 	border: 0px blue solid;
 	line-height: 30px;
 	margin: 0px auto;
 }
 
-#header>.gnb li {
+#header>.gnb #home {
+	width: 100px;
 	float: left;
-	margin-left: 50px;
+	border: 0px;
+	text-align: center;
+	background-color: #c0c0c0;
+	margin-left: 30px;
+	font-size: 1.1em;
+}
+
+#header>.gnb #left {
+	float: left;
+	margin-left: 20px;
+	font-size: 0.9em;
+}
+
+#header>.gnb #right {
+	float: right;
+	margin-left: 20px;
 	font-size: 0.9em;
 }
 
@@ -44,14 +64,24 @@ li {
 }
 
 #header>.logo {
-	width: 200px;
-	height: 100px;
-	border: 1px solid #CCCCCC;
-	margin: 70px auto;
-	text-align: center;
-	line-height: 100px;
+	width: 100%;
+	height: 200px;
+	border: 0px solid #CCCCCC;
+	background-color: #ffffff;
 }
 
+#header>.logo #logo {
+	width: 200px;
+	height: 100px;
+	padding-top: 50px;
+	border: 0px solid #CCCCCC;
+	margin: 0px auto;
+	text-align: center;
+	line-height: 100px;
+	font-size: 60px;
+}
+
+/* 
 #header>.hit_menu>ul {
 	width: 1000px;
 	border: 0px solid blue;
@@ -82,29 +112,31 @@ li {
 	color: #282828;
 	font-size: 1.1em;
 }
-
+ */
 #header>.lnb {
 	width: 100%;
 	border: 1px solid #CCCCCC;
-	border-top-style: dashed;
-	margin: 20px auto;
+	margin: 0px auto;
+	text-align: center;
+	background-color: #ffffff;
 }
 
 #header>.lnb ul {
-	width: 1000px;
-	height: 50px;
+	width: 1024px;
+	height: 30px;
 	margin: 0px auto;
 	text-align: center;
 	border: 0px solid blue;
+	display: inline;
 }
 
 #header>.lnb li {
 	width: 100px;
 	height: 30px;
-	float: left;
-	margin-left: 20px;
+	margin: 20px;
 	text-align: center;
 	line-height: 50px;
+	display: inline-block;
 }
 
 #header>.lnb a {
