--- a/grasse/src/main/webapp/WEB-INF/include/include-header.jspf
+++ b/grasse/src/main/webapp/WEB-INF/include/include-header.jspf
@@ -19,7 +19,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="<c:url value='/resources/js/common.js'/>" charset="utf-8"></script>
 
-<!-- 스타일시트 참조  -->
+<!-- Bootstrap core CSS  -->
 <link rel="stylesheet" href="/grasse/resources/css/bootstrap.min.css">
 
 <!-- 애니매이션 담당 JQUERY -->
