--- a/grasse/src/main/webapp/resources/css/footer.css
+++ b/grasse/src/main/webapp/resources/css/footer.css
@@ -1,39 +1,50 @@
-@charset "UTF-8";
-
-#footer {
-	width: 1000px;
-	margin: 0px auto;
-	border: 0px solid red;
-	overflow: hidden;
+.footer {
+    background: #191919;
+    padding: 50px 0px;
+    color: #fff;
+    margin-top: 50px;
 }
-
-#footer>div {
-	height: 100px;
-	border: 1px solid #CCCCCC;
-	text-align: center;
-	line-height: 100px;
-	border-right-width: 0px;
-	float: left;
+.single-widget {
+    position: relative;
+    padding-right: 20px;
+} 
+.single-widget:after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 1px;
+    background: #d5d5d5;
+    content: '';
+    height: 100%;
+    min-height: 230px;
 }
-
-#footer>div:first-child {
-	width: 200px;
-	float: left;
+.footer .col-md-3:last-child .single-widget:after {
+    width: 0px;
 }
-
-#footer>div:nth-child(2) {
-	width: 490px;
+.single-widget h2.widget-title {
+    font-size: 18pt;
+    text-transform: uppercase;
+    font-weight: 600;
+    padding-bottom: 10px;
+    font-family: 'raleway', sans-serif;
 }
-
-#footer>div:nth-child(3) {
-	width: 300px;
-	border-right-width: 1px;
+.widget-inner, .widget-inner a {
+    color: #d5d5d5;
 }
-
-#footer>div:nth-child(4) {
-	width: 1000px;
-	clear: both; /* float 기능을 지운다. */
-	margin-top: 10px;
-	background-color: #242424;
-	color: #FFFFFF;
+.widget-inner img {
+    padding: 15px 0px;
+}
+.single-widget ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+.single-widget ul li {
+    padding: 5px 0px;
+}
+.copyright {
+    background: #0e0e0e;
+    padding: 30px 0px;
+    color: #fff;
+    font-family: 'raleway', sans-serif;
 }
